--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,19 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Mental Health Log</h1>
-    <form action="log/new">
-        <button type="submit">create</button>
-    </form>
-    <% for (let i = 0; i < log.length; i++) { %>
-        <div class="display">
-            <h4><a href="/log/<%=log[i]._id%>"><%=log[i].date%></a></h4>
-            <img src="<%=log[i].feelingemoji%>" width="50" height="auto">
+    <div class="container">
+        <div class="row">
+            <h1 class="col-9">Mental Health Log</h1>
+            <div id="createbttnhome" class="col-3">
+                <form id="createbttnhome1" action="log/new">
+                    <input type="submit" value="create entry">
+                </form>
+            </div>
         </div>
-   <% } %>
+        <div id="logcontent" class="row gy-3">
+        <% for (let i = 0; i < log.length; i++) { %>
+            <div id="display" class="col-3">
+                <div id="indexbox" class="p-2 border border-3 rounded">
+                    <div id="indextitle">
+                <h5 class="indexcontent"><a href="/log/<%=log[i]._id%>"><%=log[i].date%></a></h5>
+                    </div>
+                    <div id="indexemoji">
+                <img class="indexcontent" src="<%=log[i].feelingemoji%>" width="50" height="auto">
+                        </div>
+                </div>
+            </div>
+        <% } %>
+        </div>
+    </div>
 </body>
 </html>
