--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,55 +18,70 @@
         <form action="/log" method="POST">
             <div class="row">
                 <div class="col form-group">
-                    <label for="date">date</label>
+                    <label for="date">Date</label>
                     <input class="form-control" type="text" name="date" id="date"/>
                 </div>
                 <div class="col form-group">
-                    <label for="emotions">emotions</label>
+                    <label for="emotions">Emotions</label>
                     <input class="form-control" type="text" name="emotions"/>
                 </div>
             </div>
             <input id="feeling" type="text" name="feeling"/>
             <input id="feelingemoji" type="text" name="feelingemoji">
-            <div class="row">
+            <div class="rowtop row">
                 <div class="col form-group">
-                    <lab for="entry">entry</lab>
+                    <lab for="entry">Entry</lab>
                     <textarea class="form-control" type="text" name="entry" rows="10"></textarea>
                 </div>
                 <div class="col">
                     <label>How are you feeling today?</label>
-                    <div class="row">
-                    <div class="col">
-                        <img id="happy" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Emoji_with_Smiling_Eyes_large.png?v=1571606035">
-                        <h6>Happy</h6>
+                    <div class="row1">
+                        <div class="col col1">
+                            <img id="happy" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Emoji_with_Smiling_Eyes_large.png?v=1571606035">
+                            <p>Happy</p>
+                        </div>
+                        <div class="col col1">
+                            <img id="sad" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Sleeping_with_Snoring_Emoji_large.png?v=1571606036">
+                            <p>Sad</p>
+                        </div>
+                        <div class="col col1">
+                            <img id="annoyed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Unamused_Face_Emoji_761d8bf8-c78c-45b1-80b1-a86a80d2452d_large.png?v=1571606036">
+                            <p>Annoyed</p>
+                        </div>
                     </div>
-                    <div class="col">
-                        <img id="sad" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Sleeping_with_Snoring_Emoji_large.png?v=1571606036">
-                        <h6>Sad</h6>
+                    <div class="row2">
+                        <div class="col1 col">
+                            <img id="ashamed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Persevering_Face_Emoji_large.png?v=1571606037">
+                            <p>Ashamed</p>
+                        </div>
+                        <div class="col1 col">
+                            <img id="proud" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Relieved_Emoji_large.png?v=1571606037">
+                            <p>Proud</p>
+                        </div>
+                        <div class="col1 col">
+                            <img id="stressed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Face_with_Cold_Sweat_Emoji_large.png?v=1571606037">
+                            <p>Stressed</p>
+                        </div>
                     </div>
-                    <div class="col">
-                        <img id="annoyed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Unamused_Face_Emoji_761d8bf8-c78c-45b1-80b1-a86a80d2452d_large.png?v=1571606036">
-                        <h6>Annoyed</h6>
-                    </div>
-                    </div>
-                    <div>
-                        <img id="embarrassed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Persevering_Face_Emoji_large.png?v=1571606037">
-                    </div>
-                    <div>
-                        <img id="proud" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Relieved_Emoji_large.png?v=1571606037">
-                    </div>
-                    <div>
-                        <img id="stressed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Face_with_Cold_Sweat_Emoji_large.png?v=1571606037">
-                    </div>
-                    <div>
-                        <img id="angry" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Angry_Emoji_large.png?v=1571606038">
-                    </div>
-                    <div>
-                        <img id="worried" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Worried_Face_Emoji_12fa1bbf-0297-4818-8298-d6c1a588c341_large.png?v=1571606036">
+                    <div class="row3">
+                        <div class="col1 col">
+                            <img id="angry" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Angry_Emoji_large.png?v=1571606038">
+                            <p>Angry</p>
+                        </div>
+                        <div class="col1 col">
+                            <img id="worried" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Worried_Face_Emoji_12fa1bbf-0297-4818-8298-d6c1a588c341_large.png?v=1571606036">
+                            <p>Worried</p>
+                        </div>
+                        <div class="col1 col">
+                            <img id="hopeful" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Shyly_Smiling_Face_Emoji_large.png?v=1571606037">
+                            <p>Hopeful</p>
+                        </div>
                     </div>
                 </div>
+                <div id="createnew">
+                    <input type="submit" value="create">
+                </div>
             </div>
-            <input type="submit" value="create">
         </form>
     </div>
 </body>
