--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,11 +25,11 @@
             <div id="display" class="col-3">
                 <div id="indexbox" class="p-2 border border-3 rounded">
                     <div id="indextitle">
-                <h5 class="indexcontent"><a href="/log/<%=log[i]._id%>"><%=log[i].date%></a></h5>
+                        <h5><a href="/log/<%=log[i]._id%>"><%=log[i].date%></a></h5>
                     </div>
                     <div id="indexemoji">
-                <img class="indexcontent" src="<%=log[i].feelingemoji%>" width="50" height="auto">
-                        </div>
+                        <img src="<%=log[i].feelingemoji%>" width="50" height="auto">
+                    </div>
                 </div>
             </div>
         <% } %>
