--- a/views/new.ejs
+++ b/views/new.ejs
@@ -36,44 +36,44 @@
                 <div class="col">
                     <label>How are you feeling today?</label>
                     <div class="row1">
-                        <div class="col col1">
-                            <img id="happy" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Emoji_with_Smiling_Eyes_large.png?v=1571606035">
+                        <div id="happybox" class="col col1">
+                            <img class="emojicreate" id="happy" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Emoji_with_Smiling_Eyes_large.png?v=1571606035">
                             <p>Happy</p>
                         </div>
-                        <div class="col col1">
-                            <img id="sad" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Sleeping_with_Snoring_Emoji_large.png?v=1571606036">
+                        <div id="sadbox" class="col col1">
+                            <img class="emojicreate" id="sad" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Sleeping_with_Snoring_Emoji_large.png?v=1571606036">
                             <p>Sad</p>
                         </div>
-                        <div class="col col1">
-                            <img id="annoyed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Unamused_Face_Emoji_761d8bf8-c78c-45b1-80b1-a86a80d2452d_large.png?v=1571606036">
+                        <div id="annoyedbox" class="col col1">
+                            <img class="emojicreate" id="annoyed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Unamused_Face_Emoji_761d8bf8-c78c-45b1-80b1-a86a80d2452d_large.png?v=1571606036">
                             <p>Annoyed</p>
                         </div>
                     </div>
                     <div class="row2">
-                        <div class="col1 col">
-                            <img id="ashamed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Persevering_Face_Emoji_large.png?v=1571606037">
+                        <div id="ashamedbox" class="col1 col">
+                            <img class="emojicreate" id="ashamed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Persevering_Face_Emoji_large.png?v=1571606037">
                             <p>Ashamed</p>
                         </div>
-                        <div class="col1 col">
-                            <img id="proud" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Relieved_Emoji_large.png?v=1571606037">
+                        <div id="proudbox" class="col1 col">
+                            <img class="emojicreate" id="proud" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Relieved_Emoji_large.png?v=1571606037">
                             <p>Proud</p>
                         </div>
-                        <div class="col1 col">
-                            <img id="stressed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Face_with_Cold_Sweat_Emoji_large.png?v=1571606037">
+                        <div id="stressedbox" class="col1 col">
+                            <img class="emojicreate" id="stressed" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Face_with_Cold_Sweat_Emoji_large.png?v=1571606037">
                             <p>Stressed</p>
                         </div>
                     </div>
                     <div class="row3">
-                        <div class="col1 col">
-                            <img id="angry" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Angry_Emoji_large.png?v=1571606038">
+                        <div id="angrybox" class="col1 col">
+                            <img class="emojicreate" id="angry" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Angry_Emoji_large.png?v=1571606038">
                             <p>Angry</p>
                         </div>
-                        <div class="col1 col">
-                            <img id="worried" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Worried_Face_Emoji_12fa1bbf-0297-4818-8298-d6c1a588c341_large.png?v=1571606036">
+                        <div id="worriedbox" class="col1 col">
+                            <img class="emojicreate" id="worried" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Worried_Face_Emoji_12fa1bbf-0297-4818-8298-d6c1a588c341_large.png?v=1571606036">
                             <p>Worried</p>
                         </div>
-                        <div class="col1 col">
-                            <img id="hopeful" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Shyly_Smiling_Face_Emoji_large.png?v=1571606037">
+                        <div id="hopefulbox" class="col1 col">
+                            <img class="emojicreate" id="hopeful" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Shyly_Smiling_Face_Emoji_large.png?v=1571606037">
                             <p>Hopeful</p>
                         </div>
                     </div>
