--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,9 @@
 <body>
     <div class="container">
         <div class="row">
-            <h1 class="col-9">Mental Health Log</h1>
-            <div id="createbttnhome" class="col-3">
-                <form id="createbttnhome1" action="log/new">
+            <h1 class="display-3 col-8">Mental Health Log</h1>
+            <div class="createbttnhome col-4">
+                <form class="createbttnhome1" action="log/new">
                     <input type="submit" value="create entry">
                 </form>
             </div>
