--- a/views/new.ejs
+++ b/views/new.ejs
@@ -14,24 +14,24 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class="toprow row">
             <div class="col-9">
                 <h1 class="display-3">Create new entry</h1>
             </div>
             <div class="createbttnhome col-3">
                 <form class="createbttnhome1" action="/log">
-                    <input type="submit" value="home">
+                    <input class="btn btn-secondary"  type="submit" value="home">
                 </form>
             </div>
         </div>
-        <form action="/log" method="POST">
+        <form class="bottom" action="/log" method="POST">
             <div class="row">
                 <div class="col form-group">
-                    <label for="date">Date</label>
+                    <label class="formheading" for="date">Date</label>
                     <input class="form-control" type="text" name="date" id="date"/>
                 </div>
                 <div class="col form-group">
-                    <label for="emotions">Emotions</label>
+                    <label class="formheading" for="emotions">Emotions</label>
                     <input class="form-control" type="text" name="emotions"/>
                 </div>
             </div>
@@ -39,14 +39,14 @@
             <input id="feelingemoji" type="text" name="feelingemoji">
             <div class="rowtop row">
                 <div class="col form-group">
-                    <lab for="entry">Entry</lab>
-                    <textarea class="form-control" type="text" name="entry" rows="10"></textarea>
+                    <lab class="formheading" for="entry">Entry</lab>
+                    <textarea class="form-control" type="text" name="entry" rows="12"></textarea>
                     <div id="createnew">
-                        <input type="submit" value="create">
+                        <input class="btn btn-secondary" type="submit" value="create">
                     </div>
                 </div>
                 <div class="col">
-                    <label>How are you feeling today?</label>
+                    <label class="formheading">How are you feeling today?</label>
                     <div class="row1">
                         <div id="happybox" class="col col1">
                             <img class="emojicreate" id="happy" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Emoji_with_Smiling_Eyes_large.png?v=1571606035">
